lib/src/compiler/tests/testdata/errors/52.out
error[E003]: mismatching types
 --> line:5:8
  |
5 |        struct.nested_int64_zero == "0" 
  |        ^^^^^^^^^^^^^^^^^^^^^^^^ this expression is `integer`
  |                                    ^^^ this expression is `string`
  |